--- a/src/view/contains/ViewSanPham.form
+++ b/src/view/contains/ViewSanPham.form
@@ -370,7 +370,7 @@
                           <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="jLabel22" max="32767" attributes="0"/>
-                              <Component id="txtSearchTen" pref="181" max="32767" attributes="0"/>
+                              <Component id="txtSearchTen" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="btlHienThi" min="-2" max="-2" attributes="0"/>
@@ -807,7 +807,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="T&#xec;m Ki&#x1ebf;m : M&#xe3; ho&#x1eb7;c T&#xea;n"/>
+            <Property name="text" type="java.lang.String" value="T&#xec;m Ki&#x1ebf;m : T&#x1ea5;t c&#x1ea3; thu&#x1ed9;c t&#xed;nh"/>
           </Properties>
         </Component>
       </SubComponents>
@@ -888,7 +888,7 @@
                               </Group>
                               <Component id="btnChatLieu" alignment="0" min="-2" pref="59" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="133" max="32767" attributes="0"/>
+                          <EmptySpace pref="144" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
